--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -49,8 +49,9 @@ jobs:
           # Install all packages from our central list file.
           # The --no-install-recommends flag makes it faster and smaller.
           # The || true part prevents the workflow from failing if a single Qt package is not found.
-          sudo xargs -a .github/packages.list apt-get install -y --no-install-recommends || true
-
+          #sudo xargs -a .github/packages.list apt-get install -y --no-install-recommends || true
+          grep -vE '^\s*#|^\s*$' .github/packages.list | sudo xargs apt-get install -y --no-install-
+          
       - name: Install Qt (Qt6) with additional modules
         id: install-qt # Give this step an ID to reference its output
         uses: jurplel/install-qt-action@v3
