fix(ci): Add xvfb-run  to build-and-test.yml file to run tests

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -104,7 +104,7 @@ jobs:
           cd build
           if [ -x "./tests/tests" ]; then
             echo "Running tests..."
-            ./tests/tests
+             xvfb-run ./tests/tests
           else
             echo "No tests/tests binary found — skipping test run."
           fi
