fix(ci): Install missing X11 runtime libs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -97,6 +97,13 @@ jobs:
         run: |
           cd build
           make -j$(nproc)
+          
+      - name: Install X11 runtime dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb \
+            libxcb-xinerama0 libxcb-icccm4 libxcb-image0 libxcb-util1 \
+            libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xkb1 libxkbcommon-x11-0
 
       - name: Run unit/integration tests (if present)
         shell: bash
